# botplate

./: .gitignore  Cargo.toml  central_bank.rs  channels.rs  global_message_counts.rs  guild_settings.rs  init_db.sql  inventory.rs  marriages.rs  mod.rs  prelude.rs  products.rs  proposals.rs  rings.rs  stock_shares.rs  stocks.rs  system_settings.rs  users.rs
.github/workflows/: codeql.yml  rust-clippy.yml  rust.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_central_bank.rs  m20260705_000001_create_central_bank.rs  m20260705_000001_create_users.rs  m20260706_000002_create_users.rs  m20260707_000001_create_channel.rs  m20260707_000001_create_inventory.rs  m20260707_000003_create_inventory.rs  m20260722_000003_create_channels.rs  m20260722_000004_create_channels.rs  m20260722_000004_create_items.rs  m20260722_000005_create_inventory.rs
src/: etc.rs  global.rs  main.rs  mod.rs
src/channels/: README.md  helpers.rs  mod.rs  shops.rs
src/commands/: general.rs  mod.rs
src/commands/channels/: an_index.md  mod.rs  shops.rs
src/commands/users/: an_index.md  helpers.rs  user.rs
src/entities/: central_bank.rs  channels.rs  global_message_counts.rs  guild_settings.rs  inventory.rs  items.rs  marriages.rs  mod.rs  prelude.rs  products.rs  proposals.rs  rings.rs  stock_shares.rs  stocks.rs  system_settings.rs  users.rs
src/etc/: general.rs  helpers.rs  mod.rs
src/events/: addtux.rs  bank.rs  central_bank.rs  event_handler.rs  mod.rs
src/users/: README.md  helpers.rs  mod.rs  user.rs
